[package]
name = "numan"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Humanize numbers: compact (1.2K), word (1.2 million) and SI metric (1.2 k) notation, plus parsing them back. Zero-dependency, no_std."
documentation = "https://docs.rs/numan"
repository = "https://github.com/trananhtung/numan"
homepage = "https://github.com/trananhtung/numan"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["humanize", "number", "compact", "format", "abbreviate"]
categories = ["value-formatting", "no-std", "internationalization", "mathematics"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
